--- a/style.css
+++ b/style.css
@@ -1,9 +1,144 @@
 * {
   box-sizing: border-box;
+  --primary-color: #333333;
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: "Space Mono", monospace;
+}
+
+/* wrapper */
+.wrapper {
+  min-height: 100vh;
+  position: relative;
+}
+/* Header */
+header .header-title {
+  color: var(--primary-color);
+  font-family: "Inconsolata", monospace;
+  font-size: 25px;
+  margin: 40px 70px;
+  text-transform: uppercase;
+}
+
+/* Main */
+main {
+  flex-grow: 1;
+}
+
+header,
+main,
+footer {
+  flex-shrink: 0;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+/* Article */
+.article-left img {
+  width: 650px;
+
+  margin-left: 10px;
+  margin-right: 200px;
+}
+
+.article-right h1 {
+  font-size: 65px;
+  font-family: "Space Mono", serif;
+  width: 600px;
+  margin: 0;
+  line-height: 95px;
+  letter-spacing: -0.035em;
+}
+
+.article-right p {
+  font-family: "Space Mono", serif;
+  font-size: 25px;
+  width: 400px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.article-right button {
+  background-color: #333333;
+  color: #fff;
+  font-family: "Space Mono";
+  text-transform: uppercase;
+  margin: 25px 0px;
+  font-size: 15px;
+  padding: 25px 40px;
+}
+
+.article-right button {
+  background-color: #333333;
+  border: none;
+  font-size: 14px;
+  color: #ffffff;
+  padding: 24px 43px;
+  line-height: 21px;
+}
+
+.article-right button:hover {
+  background-color: #4f4f4f;
+  cursor: pointer;
+}
+
+.article-right button:active {
+  color: #333333;
+  border: 2px solid #333333;
+  background-color: #ffffff;
+}
+
+/* Footer */
+footer {
+  text-align: center;
+  /* important dor keeping the footer at the bottom */
+  position: absolute;
+  bottom: 80px;
+  /* above 2 keeping footer at bottom and a little above the total bottom */
+  font-family: "Montserrat", sans-serif;
+  color: #bdbdbd;
+  font-size: 14px;
+  font-weight: 400;
+  width: 100%;
+}
+
+footer a {
+  text-decoration: none;
+  color: #bdbdbd;
+}
+
+/* media queries based on content */
+@media screen and (max-width: 992px) {
+  section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .article-left img {
+    width: 350px;
+    margin: 0 auto;
+  }
+
+  .article-right h1 {
+    font-size: 48px;
+    width: 350px;
+    line-height: 71px;
+  }
+
+  .article-right p {
+    margin-top: 30px;
+    font-size: 18px;
+    width: 340px;
+  }
+
+  .article-right button {
+    margin-top: 66px;
+  }
 }
